<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="loanAmount">Loan Amount</string>
    <string name="term">Term Of Loan(years)</string>
    <string name="year_rate">Yearly Interest Rate</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="results">Results</string>
    <string name="mpayment">Monthly Payment</string>
    <string name="total_interest">Total Interest</string>
    <string name="total_payment">Total Payment</string>
    <string name="Loan_hint" translatable="false">50000</string>
    <string name="term_hint" translatable="false">7</string>
    <string name="rate_hint" translatable="false">7.5</string>
    <string name="warning">Must Input all fields before calculating</string>
</resources>
