<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="fill"
    tools:context="com.cavalcanti.daniel.loan_calculator.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02">


        <TextView
            android:id="@+id/app_theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="@dimen/title"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorGrey"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/loanAmount"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_weight="1"
            android:text="@string/loanAmount"
            android:textColor="@color/colorGrey" />

        <EditText
            android:id="@+id/loan_Input"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Loan_hint"
            android:inputType="numberDecimal|number"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            android:backgroundTint="@color/colorLightBlue" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/termLoan"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_weight="1"
            android:text="@string/term"
            android:textColor="@color/colorGrey" />

        <EditText
            android:id="@+id/term_Input"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/term_hint"
            android:inputType="number"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            android:backgroundTint="@color/colorLightBlue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/interestRate"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_weight="1"
            android:text="@string/year_rate"
            android:textColor="@color/colorGrey" />

        <EditText
            android:id="@+id/rate_Input"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/rate_hint"
            android:inputType="numberDecimal|number"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            android:backgroundTint="@color/colorLightBlue"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.61"
            android:onClick="loanResults"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clearValues"
            android:text="@string/clear" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="@dimen/title"
            android:text="@string/results"
            android:textAlignment="center"
            android:textColor="@color/colorGrey"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mPayment"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_weight="1"
            android:text="@string/mpayment"
            android:textColor="@color/colorGrey" />

        <TextView
            android:id="@+id/mPayment_result"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:inputType="numberSigned"
            android:textColor="@color/colorGrey" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/totalPayment"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/total_payment"
            android:textColor="@color/colorGrey" />

        <TextView
            android:id="@+id/total_Payment_result"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_weight="1"
           android:layout_gravity="center"
            android:inputType="numberSigned"
            android:textColor="@color/colorGrey" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/totalInterest"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/paddingLeft"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/total_interest"
            android:textColor="@color/colorGrey" />

        <TextView
            android:id="@+id/total_Interest_Result"
            android:layout_width="@dimen/title"
            android:layout_height="wrap_content"
            android:layout_weight="1"
           android:layout_gravity="center"
            android:inputType="numberSigned"
            android:textColor="@color/colorGrey" />
    </LinearLayout>

</LinearLayout>

